@@ -209,6 +209,7 @@ tsNoDataAvailable = "No data available for this item."
 tsAdditionalData = "Additional data"
 
 realPath = "Real path"
+exceptionText = "%s: %s"
 
 [de]
 outputReadable = "Ausgabe"
@@ -421,3 +422,4 @@ tsNoDataAvailable = "Keine zusätzlichen Infos vorhanden."
 tsAdditionalData = "Zusätzliche Infos"
 
 realPath = "tatsächlicher Pfad"
+exceptionText = "%s: %s"
