@@ -3,6 +3,7 @@
 - Added a hint to the 'unknown' getter analysis result.
 - Added container handling to the getter analysis.
 - Added a unit of measurement to the benchmarking.
+- Added better readability to the exception analysis.
 - Change: The scalar analysis classes are now reused.
 - Change: Renamed the language fallback key from 'text' to 'en'.
 - Change: Dropped PHP 7.2 and 7.3 support.
